--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <p>Vertreten durch den Geschäftsführer: Dipl.-Ing. Dirk Kannemacher<br>
   Registergericht: Amtsgericht Hannover<br>
-  Registernummer: HRB ......<br>
+  Registernummer: HRB 229681<br>
   USt-IdNr.: DE ... ... ...</p>
 </section>
 
@@ -138,7 +138,7 @@
 
   <p>Represented by the Managing Director: Dipl.-Ing. Dirk Kannemacher<br>
   Commercial Register: Local Court of Hanover<br>
-  Registration Number: HRB ......<br>
+  Registration Number: HRB 229681<br>
   VAT ID: DE ... ... ...</p>
 
   <h3>Privacy Policy</h3>
@@ -192,3 +192,4 @@
 
 </body>
 </html>
+
