--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!-- ====== DEUTSCH ====== -->
 <section id="impressum">
   <h2>Impressum</h2>
-  <p><strong>Kannemacher Design Services GmbH i. Gr.</strong><br>
+  <p><strong>Kannemacher Design Services GmbH</strong><br>
   Dietrich-Bonhoeffer-Str. 32A<br>
   31535 Neustadt am Rübenberge<br>
   Deutschland</p>
@@ -128,7 +128,7 @@
 <!-- ====== ENGLISH ====== -->
 <section id="en">
   <h2>Legal Disclosure & Privacy Policy</h2>
-  <p><strong>Kannemacher Design Services GmbH i. Gr.</strong><br>
+  <p><strong>Kannemacher Design Services GmbH</strong><br>
   Dietrich-Bonhoeffer-Str. 32A<br>
   31535 Neustadt am Ruebenberge<br>
   Germany</p>
@@ -192,4 +192,5 @@
 
 </body>
 </html>
+
 
