--- a/index.html
+++ b/index.html
@@ -2,11 +2,120 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Kannemacher Design Services GmbH – Seite im Aufbau</title>
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Impressum & Datenschutzerklärung – Kannemacher Design Services GmbH</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 850px; margin: 40px auto; padding: 0 20px; color: #222; }
+    h1, h2, h3 { color: #003366; }
+    h1 { border-bottom: 2px solid #003366; padding-bottom: 5px; }
+    nav { margin: 20px 0; }
+    nav a { margin-right: 15px; color: #003366; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
+    section { margin-bottom: 40px; }
+    hr { margin: 40px 0; }
+  </style>
 </head>
 <body>
-  <h2>Kannemacher Design Services GmbH</h2>
-  <p>Diese Seite befindet sich derzeit im Aufbau.</p>
+
+<h1>Impressum & Datenschutzerklärung</h1>
+
+<nav>
+  <a href="#impressum">Impressum</a>
+  <a href="#datenschutz">Datenschutzerklärung</a>
+  <a href="#haftung">Haftungsausschluss</a>
+</nav>
+
+<!-- ====== IMPRESSUM ====== -->
+<section id="impressum">
+  <h2>Impressum</h2>
+  <p><strong>Kannemacher Design Services GmbH</strong><br>
+  Dietrich-Bonhoeffer-Str. 32A<br>
+  31535 Neustadt am Rübenberge<br>
+  Deutschland</p>
+
+  <p>Telefon: +49 (0) 155 688 431 41<br>
+  E-Mail: <a href="mailto:info@kannemacher-ds.com">info@kannemacher-ds.com</a></p>
+
+  <p>Vertreten durch den Geschäftsführer: Dipl.-Ing. Dirk Kannemacher<br>
+  Registergericht: Amtsgericht Hannover<br>
+  Registernummer: HRB 229681<br>
+  USt-IdNr.: DE 458477819</p>
+
+  <p><strong>Verantwortlich für journalistisch-redaktionelle Inhalte gemäß § 55 Abs. 2 RStV:</strong><br>
+  Dipl.-Ing. Dirk Kannemacher<br>
+  Dietrich-Bonhoeffer-Str. 32A<br>
+  31535 Neustadt am Rübenberge</p>
+
+  <p><strong>Hinweis zur Streitbeilegung:</strong><br>
+  Wir sind zur Teilnahme an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle weder verpflichtet noch bereit.</p>
+</section>
+
+<!-- ====== DATENSCHUTZERKLÄRUNG ====== -->
+<section id="datenschutz">
+  <h2>Datenschutzerklärung</h2>
+  <p>Diese Website wird über <strong>GitHub Pages</strong> (Dienst der GitHub Inc., 88 Colin P. Kelly Jr. Street, San Francisco, CA 94107, USA) bereitgestellt. Sie dient ausschließlich der Erfüllung gesetzlicher Informationspflichten nach § 5 TMG und Art. 13 DSGVO. Es werden keine Formulare, Cookies oder Analyse-Tools eingesetzt.</p>
+
+  <h3>1. Verantwortlicher</h3>
+  <p><strong>Kannemacher Design Services GmbH</strong><br>
+  Dietrich-Bonhoeffer-Str. 32A<br>
+  31535 Neustadt am Rübenberge<br>
+  Deutschland<br>
+  Telefon: +49 (0)155 688 431 41<br>
+  E-Mail: <a href="mailto:info@kannemacher-ds.com">info@kannemacher-ds.com</a><br>
+  Vertreten durch den Geschäftsführer: Dipl.-Ing. Dirk Kannemacher</p>
+
+  <h3>2. Verarbeitung personenbezogener Daten beim Aufruf der Website</h3>
+  <p>Beim Aufruf dieser Website erhebt GitHub als Hostinganbieter automatisch technische Zugriffsdaten (z. B. IP-Adresse, Browsertyp, Betriebssystem, Zeitstempel). Diese Daten sind erforderlich, um den sicheren und stabilen Betrieb der Seite zu gewährleisten. Rechtsgrundlage ist Art. 6 Abs. 1 lit. f DSGVO.</p>
+  <p>Weitere Informationen finden Sie in der <a href="https://docs.github.com/de/site-policy/privacy-policies/github-privacy-statement" target="_blank">GitHub-Datenschutzerklärung</a>.</p>
+
+  <h3>3. Kommunikation per E-Mail, Telefon und Microsoft Teams</h3>
+  <p>Wenn Sie uns per E-Mail, telefonisch oder über Microsoft Teams kontaktieren, verarbeiten wir die dabei übermittelten personenbezogenen Daten ausschließlich zum Zweck der Bearbeitung Ihrer Anfrage. Rechtsgrundlagen sind Art. 6 Abs. 1 lit. b und f DSGVO.</p>
+
+  <h3>4. Datenverarbeitung im Rahmen von Geschäftsbeziehungen</h3>
+  <p>Wir verarbeiten personenbezogene Daten unserer Kunden, Partner und Lieferanten ausschließlich zur Anbahnung, Durchführung und Abrechnung geschäftlicher Vorgänge gemäß Art. 6 Abs. 1 lit. b und f DSGVO.</p>
+
+  <h3>5. Verarbeitung personenbezogener Daten im Bewerbungsverfahren</h3>
+  <p>Wir erheben und verarbeiten die personenbezogenen Daten von Bewerbern für den Ablauf des Bewerbungsverfahrens. Die Verarbeitung kann auch auf elektronischem Wege erfolgen. Dies ist insbesondere dann der Fall, wenn ein Bewerber entsprechende Bewerbungsunterlagen auf dem elektronischen Wege an uns übermittelt. Schließen wir einen Anstellungsvertrag mit einem Bewerber, werden die übermittelten Daten zum Zwecke der Abwicklung des Beschäftigungsverhältnisses unter Beachtung der gesetzlichen Vorschriften gespeichert. Wird von uns kein Anstellungsvertrag mit dem Bewerber geschlossen, so werden die Bewerbungsunterlagen sechs Monate nach Bekanntgabe der Absageentscheidung gelöscht, sofern einer Löschung keine sonstigen berechtigten Interessen unsererseits entgegenstehen. Sonstiges berechtigtes Interesse in diesem Sinne ist beispielsweise eine Beweispflicht in einem Verfahren nach dem Allgemeinen Gleichbehandlungsgesetz (AGG).</p>
+
+  <h3>6. Nutzung unserer LinkedIn-Präsenz</h3>
+  <p>Wir greifen für den auf LinkedIn angebotenen Informationsdienst auf die technische Plattform und die Dienste der LinkedIn lreland Unlimited Company, Wilton Place, Dublin 2, Irland zurück. Wir weisen Sie darauf hin, dass Sie unsere LinkedIn-Seite und ihre Funktionen in eigener Verantwortung nutzen. Dies gilt insbesondere für die Nutzung der interaktiven Funktionen (z.B. Kommentieren, Teilen, Bewerten).</p>
+  <p>Beim Besuch unserer LinkedIn-Seite erfasst LinkedIn u.a. Ihre IP-Adresse sowie weitere Informationen, die in Form von Cookies auf Ihrem PC vorhanden sind. Diese Informationen werden verwendet, um uns als Betreiber der Linkedln-Seiten statistische Informationen über die Inanspruchnahme der LinkedIn -Seite zur Verfügung zu stellen. Nähere Informationen hierzu stellt Linkedln unter folgendem Link zur Verfügung: <a href="https://www.linkedin.com/legal/privacy-policy" target="_blank">LinkedIn-Datenschutzerklärung</a>.</p>
+  <p>Die in diesem Zusammenhang über Sie erhobenen Daten werden von der LinkedIn Inc. verarbeitet und dabei gegebenenfalls in Länder außerhalb der Europäischen Union übertragen. Welche Informationen LinkedIn erhält und wie diese verwendet werden, beschreibt Linkedln in allgemeiner Form in seinen Datenverwendungsrichtlinien. Dort finden Sie auch Informationen über Kontaktmöglichkeiten zu Linkedln sowie zu den Einstelknöglichkeiten für Werbeanzeigen. Die Datenverwendungsrichtlinien sind unter folgendem Link verfügbar: <a href="https://www.linkedin.com/legal/privacy-policy" target="_blank">LinkedIn-Datenschutzerklärung</a></p>
+  <p>In welcher Weise LinkedIn die Daten aus dem Besuch von LinkedIn-Seiten für eigene Zwecke verwendet, in welchem Umfang Aktivitäten auf der LinkedIn-Seite einzelnen Nutzern zugeordnet werden, wie lange LinkedIn diese Daten speichert und ob Daten aus einem Besuch der LinkedIn-Seite an Dritte weitergegeben werden, wird von LinkedIn nicht abschließend und klar benannt und ist uns nicht bekannt.</p>
+  <p>Beim Zugriff auf eine LinkedIn-Seite wird die Ihrem Endgerät zugeteilte 1P-Adresse an LinkedIn übermittelt. Nach Auskunft von Linkedln wird diese 1P-Adresse anonymisiert (bei "deutschen" lPAdressen) und nach 90 Tagen gelöscht. LinkedIn speichert darüber hinaus Informationen über die Endgeräte seiner Nutzer (z.B. im Rahmen der Funktion ,,Anmeldebenachrichtigung"); gegebenenfalls ist LinkedIn damit eine Zuordnung von lP- Adressen zu einzelnen Nutzern möglich.
+  <p>Wenn Sie als Nutzerin oder Nutzer aktuell bei LinkedIn angemeldet sind, befindet sich auf Ihrem Endgerät ein Cookie mit Ihrer Facebook-kennung. Dadurch ist Linkedln in der Lage nachzuvollziehen, dass Sie diese Seite aufgesucht und wie Sie sie genutzt haben. Dies gilt auch für alle anderen Linkedln -Seiten. Über in Webseiten eingebundene Linkedln -Buttons ist es Linkedln möglich, Ihre Besuche auf diesen Webseiten Seiten zu erfassen und Ihrem LinkedIn -Profil zuzuordnen. Anhand dieser Daten können Inhalte oder Werbung auf Sie zugeschnitten angeboten werden.</p>
+  <p>Wenn Sie dies vermeiden möchten, sollten Sie sich bei LinkedIn abmelden bzw. die Funktion "angemeldet bleiben" deaktivieren, die auf Ihrem Gerät vorhandenen Cookies löschen und Ihren Browser beenden und neu starten. Auf diese Weise werden Linkedln -lnformationen, über die Sie unmittelbar identifiziert werden können, gelöscht. Damit können Sie unsere LinkedIn -Seite nutzen, ohne dass Ihre Linkedln -Kennung offenbart wird. Wenn Sie auf interaktive Funktionen der Seite zugreifen (Gefällt mir, Kommentieren, Teilen, Nachrichten etc.), erscheint eine LinkedIn -Anmeldemaske. Nach einer etwaigen Anmeldung sind Sie für LinkedIn erneut als bestimmte/r Nutzerin/Nutzer erkennbar.</p>
+  <p>Informationen dazu, wie Sie über Sie vorhandene Informationen verwalten oder löschen können, finden Sie auf folgenden LinkedIn Support-Seiten:  <a href="https://www.linkedin.com/legal/privacy-policy" target="_blank">LinkedIn-Datenschutzerklärung</a></p>
+  <p>Wir als Anbieter des Informationsdienstes erheben und verarbeiten darüber hinaus keine Daten aus Ihrer Nutzung unseres Dienstes.</p>
+
+  <h3>7. Rechte der betroffenen Personen</h3>
+  <p> Auskunftsrecht gemäß Art. 15 DSGVO: Sie haben insbesondere ein Recht auf Auskunft über Ihre von uns verarbeiteten personenbezogenen Daten, die Verarbeitungszwecke, die Kategorien der verarbeiteten personenbezogenen Daten, die Empfänger oder Kategorien von Empfängern, gegenüber denen Ihre Daten offengelegt wurden oder werden, die geplante Speicherdauer bzw. die Kriterien für die Festlegung der Speicherdauer, das Bestehen eines Rechts auf Berichtigung, Löschung, Einschränkung der Verarbeitung, Widerspruch gegen die Verarbeitung, Beschwerde bei einer Aufsichtsbehörde, die Herkunft Ihrer Daten, wenn diese nicht durch uns bei Ihnen erhoben wurden, das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling und ggf. aussagekräftige Informationen über die involvierte Logik und die Sie betreffende Tragweite und die angestrebten Auswirkungen einer solchen Verarbeitung, sowie Ihr Recht auf Unterrichtung, welche Garantien gemäß Art. 46 DSGVO bei Weiterleitung Ihrer Daten in Drittländer bestehen.</p>
+  <p>Recht auf Berichtigung gemäß Art. 16 DSGVO: Sie haben ein Recht auf unverzügliche Berichtigung Sie betreffender unrichtiger Daten und/oder Vervollständigung Ihrer bei uns gespeicherten unvollständigen Daten.</p>
+  <p>Recht auf Löschung gemäß Art. 17 DSGVO: Sie haben das Recht, die Löschung Ihrer personenbezogenen Daten bei Vorliegen der Voraussetzungen des Art. 17 Abs. 1 DSGVO zu verlangen. Dieses Recht besteht jedoch insbesondere dann nicht, wenn die Verarbeitung zur Ausübung des Rechts auf freie Meinungsäußerung und Information, zur Erfüllung einer rechtlichen Verpflichtung, aus Gründen des öffentlichen Interesses oder zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen erforderlich ist.</p>
+  <p>Recht auf Einschränkung der Verarbeitung gemäß Art. 18 DSGVO: Sie haben das Recht, die Einschränkung der Verarbeitung Ihrer personenbezogenen Daten zu verlangen, solange die von Ihnen bestrittene Richtigkeit Ihrer Daten überprüft wird, wenn Sie eine Löschung Ihrer Daten wegen unzulässiger Datenverarbeitung ablehnen und stattdessen die Einschränkung der Verarbeitung Ihrer Daten verlangen, wenn Sie Ihre Daten zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen benötigen, nachdem wir diese Daten nach Zweckerreichung nicht mehr benötigen oder wenn Sie Widerspruch aus Gründen Ihrer besonderen Situation eingelegt haben, solange noch nicht feststeht, ob unsere berechtigten Gründe überwiegen.</p>
+  <p>Recht auf Unterrichtung gemäß Art. 19 DSGVO: Haben Sie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung gegenüber dem Verantwortlichen geltend gemacht, ist dieser verpflichtet, allen Empfängern, denen die Sie betreffenden personenbezogenen Daten offengelegt wurden, diese Berichtigung oder Löschung der Daten oder Einschränkung der Verarbeitung mitzuteilen, es sei denn, dies erweist sich als unmöglich oder ist mit einem unverhältnismäßigen Aufwand verbunden. Ihnen steht das Recht zu, über diese Empfänger unterrichtet zu werden.</p>
+  <p>Recht auf Datenübertragbarkeit gemäß Art. 20 DSGVO: Sie haben das Recht, Ihre personenbezogenen Daten, die Sie uns bereitgestellt haben, in einem strukturierten, gängigen und maschinenlesebaren Format zu erhalten oder die Übermittlung an einen anderen Verantwortlichen zu verlangen, soweit dies technisch machbar ist.</p>
+  <p>Recht auf Widerruf erteilter Einwilligungen gemäß Art. 7 Abs. 3 DSGVO: Sie haben das Recht, eine einmal erteilte Einwilligung in die Verarbeitung von Daten jederzeit mit Wirkung für die Zukunft zu widerrufen. Im Falle des Widerrufs werden wir die betroffenen Daten unverzüglich löschen, sofern eine weitere Verarbeitung nicht auf eine Rechtsgrundlage zur einwilligungsbsen Verarbeitung gestützt werden kann. Durch den Widerruf der Einwilligung wird die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung nicht berührt.</p>
+  <p>Recht auf Beschwerde gemäß Art. 77 DSGVO: Wenn Sie der Ansicht sind, dass die Verarbeitung der Sie betreffenden personenbezogenen Daten gegen die DSGVO verstößt, haben Sie - unbeschadet eines anderweitigen verwaltungsrechtlichen oder gerichtlichen Rechtsbehelfs - das Recht auf Beschwerde bei einer Aufsichtsbehörde, insbesondere in dem Mitgliedstaat Ihres Aufenthaltsortes, Ihres Arbeitsplatzes oder des Ortes des mutmaßlichen Verstoßes.</p>
+
+  <h3>8. Datensicherheit</h3>
+  <p>Wir treffen technische und organisatorische Maßnahmen, um Ihre Daten vor unbefugtem Zugriff oder Verlust zu schützen. Die Website wird über HTTPS bereitgestellt.</p>
+
+  <h3>9. Aktualität dieser Datenschutzerklärung</h3>
+  <p>Wir behalten uns vor, diese Datenschutzerklärung bei Bedarf anzupassen.</p>
+
+</section>
+
+<!-- ====== HAFTUNG ====== -->
+<section id="haftung">
+  <h2>Haftungsausschluss</h2>
+  <p>Die Inhalte dieser Seite wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte kann jedoch keine Gewähr übernommen werden.</p>
+  <p>Für externe Links übernehmen wir keine Haftung.</p>
+  <p>Alle Inhalte dieser Seite sind urheberrechtlich geschützt.</p>
+</section>
+
+<hr>
+
 </body>
 </html>
+
